--- a/austin-web/src/main/resources/application.properties
+++ b/austin-web/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.application.name=austin
 ########################################## database start ##########################################
 # TODO required!
 # notice:mysql version 5.7x !!!
-spring.datasource.url=jdbc:mysql://${austin.database.ip:austin-mysql}:${austin.database.port:3306}/austin?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=${austin.database.username:root}
-spring.datasource.password=${austin.database.password:root123_A}
+#spring.datasource.url=jdbc:mysql://${austin.database.ip:austin-mysql}:${austin.database.port:3306}/austin?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=${austin.database.username:root}
+#spring.datasource.password=${austin.database.password:root123_A}
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/austin?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=root123_A
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=10
@@ -22,9 +26,13 @@ spring.datasource.hikari.validation-timeout=1000
 
 ########################################## redis start ##########################################
 # TODO required!
-spring.redis.host=${austin.redis.ip:austin-redis}
-spring.redis.port=${austin.redis.port:6379}
-spring.redis.password=${austin.redis.password:austin}
+#spring.redis.host=${austin.redis.ip:austin-redis}
+#spring.redis.port=${austin.redis.port:6379}
+#spring.redis.password=${austin.redis.password:austin}
+
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=austin
 ########################################## redis end ##########################################
 
 
