--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     restart: always
     container_name: austin-mysql
     image: mysql:5.7
+    platform: linux/x86_64
     hostname: mysql
     volumes:
       - ./doc/sql:/docker-entrypoint-initdb.d
